--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/router": "~13.1.0",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
+    "font-awesome": "^4.7.0",
     "rxjs": "~7.4.0",
+    "sweetalert2": "^11.4.8",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
